--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 ## ---------- Public Environment Variables ----------
-NEXT_PUBLIC_CURRENCY=$
+NEXT_PUBLIC_CURRENCY=Rs.
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_c2V0LWVncmV0LTgyLmNsZXJrLmFjY291bnRzLmRldiQ
 
 
